# dotfiles

./: .ansible-lint  .ansible-lint-ignore  .editorconfig  .gitignore  .gitmodules  .pylintrc  Preferences.sublime-settings  README.md  README.org  ansible.cfg  ansible_requirements.yml  dotbot.conf.yaml  dotfiles.yml  gitconfig  install.conf.yaml  install.sh  mise.toml  pre-install.sh  pyproject.toml  requirements.txt  vimrc  zshrc
alacritty/: alacritty.yml
borg/: borg-mate.sh.tmpl.j2
eilmeldung/: feeds.opml
emacs/: config.el  config.org  elfeed.org  init.el  packages.el  start.org
emacs-from-scratch/: config.el  config.org  early-init.el
files/: change-volume.sh  check-arch-updates.sh  check-aur-updates.sh  open_file.sh  toggle-bluetooth.sh
herbstluftwm/: autostart  configure_displays.sh  panel.sh
kitty/: kitty.conf
leftwm/: config.ron  config.toml  up
neovim/: init.lua
picom/: picom.conf
playbooks/: X.yml  age.yml  alacritty.yml  aliases.yml  arandr.yml  asdfvm.yml  aur_builder.yml  autofs.yml  autorandr.yml  bat.yml  bluetooth.yml  borg.yml  brave-browser.yml  chromium.yml  curl.yml  direnv.yml  discord.yml  dive.yml  docker-credential-secretservice.yml  docker.yml  dotfiles.yml  dropbox.yml  duf.yml  dunst.yml  dust.yml  dxvk_aur.yml  dxvk_git.yml  eilmeldung.yml  emacs.yml  exa.yml  eza.yml  felix_rs.yml  fido2.yml  firewall.yml  fluffychat.yml  fonts.yml  freecad.yml  fx.yml  fzf.yml  geogebra.yml  (+87 more)
qtile/: config.py
redshift/: brightness.sh  redshift-gtk.service.j2  redshift.conf.j2
rofi/: README.md  config.rasi
roles/: README.org
vim/: map.vim  (+1 more)
(+109 files in other folders)
