[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Nils <nils@ungerichtet.de>"]

[tool.poetry.dependencies]
python = "^3.10"
qtile = "^0.21.0"
ansible = "^6.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.14.0"
ansible-lint = "^6.3.0"
black = "^22.6.0"
pyright = "^1.1.267"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
