[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Nils <nils@ungerichtet.de>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.13.4"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.6.0"
pylint = "^2.14.0"
ansible-lint = { version = "^6.20.0", markers = "platform_system != 'Windows'" }
qtile = "^0.23.0"
python-lsp-server = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "./.venv"
exclude = [
    "**/__pycache__",
    ".pytypestubs"
]
