[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Nils <nils@ungerichtet.de>"]

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "^2.17.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.6.0"
pylint = "^2.14.0"
qtile = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "./.venv"
exclude = [
    "**/__pycache__",
    ".pytypestubs"
]
